2003-09-17  John Levon  <levon@movementarian.org>

	* daemon/opd_image.c: fix thread profiling when
	--separate-library=0

2003-09-17  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.c: add module to list of module ...
	* daemon/opd_kernel.c: s/print/verbprintf

2003-09-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_config.h: remove OPD_MAX_MODULEs
	* dae/opd_kernel.c:
	* daemon/opd_kernel.c: remove fixed array of modules replaced by
	  a list. Unify the way we create opd_module
	* utils/opcontrol: don't use --thread-profiling for 2.4

2003-09-17 Ka Fai Lu  <kafai0928@yahoo.com>

	I adapted slightly this patch Phil.
	* daemon/opd_image.c:
	* daemon/opd_image.h:
	* daemon/opd_kernel.c:
	* daemon/opd_sample_files.c:
	* daemon/oprofiled.c:
	* utils/opcontrol: implement per thread profiling

2003-09-16  Philippe Elie  <phil.el@wanadoo.fr>

	* libopt++/popt_options.h:
	* libpp/locate_images.cpp: minor tidy

2003-09-16  John Levon  <levon@movementarian.org>

	* utils/opcontrol: don't pass pid/pgrp filter
	to 2.6 daemon

	* dae/oprofiled.c:
	* daemon/oprofiled.c: setrlimit to 8192 (lame
	workaround for now), minor cleanups

2003-09-15  John Levon  <levon@movementarian.org>

	* common_option.cpp: rename the array to
	avoid a link error in GCC 3.4

2003-09-15  John Levon  <levon@movementarian.org>

	* libop/Makefile.am:
	* libop/op_interface_25.h: move to ...

	* daemon/Makefile.am:
	* daemon/opd_interface.h: ... here

	* daemon/opd_image.c:
	* daemon/oprofiled.c: use above. Remove pointless
	command line options.

	* libop/op_config_25.h: remove.

	* libop/op_hw_config.h: move DCOOKIE_SHIFT to
	opd_interface.h

2003-09-15  John Levon  <levon@movementarian.org>

	* configure.in: use -Wdeclaration-after-statement
	if available

	* README:
	* daemon/opd_util.c:
	* daemon/opd_util.h:
	* doc/opannotate.1.in:
	* doc/opgprof.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* gui/oprof_start.cpp:
	* gui/oprof_start_util.cpp: