@@ -1,3 +1,8 @@
+2003-09-17  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* dae/opd_kernel.c:
+	* daemon/opd_kernel.c: fix use after free of module
+
 2003-09-17  John Levon  <levon@movementarian.org>
 
 	* daemon/opd_image.c: fix thread profiling when
